--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: 星合の空 # 站点标题
+title: github
 description: Kan Wu's Personal Blog
 baseurl: "" # 假如你的博客是建在某个目录下的，请在这里加上目录名，并且下面配置的所有链接里的`/assets`前也要加，即`/your_baseurl/assets`。这一项结尾不要有'/'。
 
