--- a/_config.yml
+++ b/_config.yml
@@ -1,466 +1,5 @@
-title: github
-description: Kan Wu's Personal Blog
-baseurl: "" # 假如你的博客是建在某个目录下的，请在这里加上目录名，并且下面配置的所有链接里的`/assets`前也要加，即`/your_baseurl/assets`。这一项结尾不要有'/'。
-
-defaults: # 将所有配置选项使用<https://jekyllrb.com/docs/configuration/front-matter-defaults/>功能进行配置
-  - scope:
-      path: "" # an empty string here means all files in the project
-    values: # 以下配置项也可以在任意页面自定义
-      jekyll-theme-WuK: # 我的主题的自定义样式都在这个命名空间
-        comments: # 留言页，请先修改这里，确保使用的是你自己的repo！参照<https://utteranc.es/>
-          append: |
-            <script
-              repo="wu-kan/utterances-storage"
-              src="https://utteranc.es/client.js"
-              issue-term="url"
-              theme="github-light"
-              crossorigin="anonymous"
-              async="async"
-            ></script>
-        merger: # 打赏页，需要配置！
-          append_to_head:
-            - | # 需要配置的变量见<https://github.com/qr-merger/merger>
-              <script>
-                var myname = "Kan Wu";
-                var profile = "https://gravatar.loli.net/avatar/289efba375d63424de3c49569c446744?s=320";
-                var usage = "donate";
-                var wechat = "wxp://f2f0BhUoIC_9gex7-tC2PRvVuoA486mK5WyC";
-                var alipay = "https://qr.alipay.com/fkx02750b5kbplxvudqrx16";
-                var paypal = "https://paypal.me/wukan0621";
-                var multilingual = false;
-                var branding = false;
-                var title = "选择你的支付方式";
-                var subtitle = "跟随进一步的指示以向" + myname + "付款";
-              </script>
-        default:
-          html_lang: zh # <https://www.w3school.com.cn/tags/html_ref_language_codes.asp>
-          color-mode: auto # <https://primer.style/css/storybook/?path=/docs/support-theming--docs>
-          light-theme: light
-          dark-theme: dark
-          menu:
-            nav: # 导航部分的内容，你也可以自己增加对应的链接
-              - title: '首页 / Index'
-                href: /
-              - title: '留言 / Comments'
-                href: /comments/
-              - title: '归档 / Archive'
-                href: /archive/
-              - title: '标签 / Tags'
-                href: /tags/
-              - title: '捐赠 / Donate'
-                href: /merger/
-              - title: '简历 / Resume'
-                href: https://resume.wu-kan.cn/
-              - title: 'GitHub'
-                href: https://github.com/wu-kan
-              - title: 'Bilibili'
-                href: https://space.bilibili.com/166390020
-              - title: 'Zhihu'
-                href: https://www.zhihu.com/people/wukan0621
-              - title: 'Google Scholar'
-                href: https://scholar.google.com/citations?user=aU9P37UAAAAJ
-              - title: 'Vjudge'
-                href: https://vjudge.net/user/WuK
-              - title: 'jekyll-theme-WuK'
-                href: https://jekyll-theme-WuK.wu-kan.cn/
-            footer: | # 页面统计
-              <div>
-                <span id="busuanzi_container_site_pv">
-                  <span id="busuanzi_value_site_pv"></span>
-                  visits
-                </span>
-                <span id="busuanzi_container_site_uv">
-                  <span id="busuanzi_value_site_uv"></span>
-                  vistors
-                </span>
-                <script
-                  src="https://cdn.jsdelivr.net/npm/busuanzi@2.3/bsz.pure.mini.js"
-                  async="async"
-                ></script>
-              </div>
-              <div>
-                (C) 2017-2024 wu-kan
-              </div>
-            jekyll-toc: # <https://github.com/allejo/jekyll-toc>
-              enable: true
-              prepend: |
-                <style>
-                  #wrap-toc {
-                    padding-left: 3em;
-                  }
-                </style>
-            prepend:
-              - |
-                <form class="SelectMenu-filter">
-                  <input
-                    class="SelectMenu-input form-control"
-                    type="text"
-                    placeholder="Search"
-                    aria-label="Filter"
-                    id="wrap-search-input"
-                  />
-                  <ol class="px-5" id="wrap-search-result"></ol>
-                  <script
-                    src="https://cdn.jsdelivr.net/npm/simple-jekyll-search@1.9.1"
-                    async="async"
-                    onload='
-                  SimpleJekyllSearch({
-                    json: "/assets/simple-jekyll-search/search.json",
-                    searchInput: document.getElementById("wrap-search-input"),
-                    resultsContainer: document.getElementById("wrap-search-result"),
-                    searchResultTemplate: `<li><a href="{url}">{title}</a></li>`,
-                    limit: 9,
-                    fuzzy: true
-                  })'
-                  ></script>
-                </form>
-          append_to_head: # 通过内嵌html的方式引入并定制插件，删改前确定知道自己在做什么。定制插件的方式可以参考这篇文章 <https://wu-kan.cn/_posts/2019-01-18-基于Jekyll搭建个人博客/>
-            - | # 页面加载动画，可在 <https://css-loaders.com/> 挑选
-              <style>
-                #wrap-loader {
-                  width: 100%;
-                  height: 100%;
-                  position: fixed;
-                  top: 0;
-                  left: 0;
-                  background-color: white;
-                  z-index: 999;
-                  display: flex;
-                  justify-content: center;
-                  align-items: center;
-                }
-                .loader {
-                  width: calc(6*30px);
-                  height: 50px;
-                  display: flex;
-                  color: Black;
-                  filter: drop-shadow(30px 25px 0 currentColor) drop-shadow(60px 0 0 currentColor) drop-shadow(120px 0 0 currentColor);
-                  clip-path: inset(0 100% 0 0);
-                  animation: l12 2s infinite steps(7);
-                }
-                .loader:before {
-                  content: "";
-                  width: 30px;
-                  height: 25px;
-                  --c:no-repeat radial-gradient(farthest-side,currentColor 92%,#0000);
-                  background:
-                    var(--c) left /70% 70%,
-                    var(--c) right/20% 20%,
-                    var(--c) top    0 right 15%/20% 20%,
-                    var(--c) bottom 0 right 15%/20% 20%;
-                }
-                @keyframes l12 {
-                  100% {clip-path: inset(0 -30px 0 0)}
-                }
-              </style>
-              <script>
-                document.addEventListener("DOMContentLoaded", (event) => {
-                  let x = document.getElementById("wrap-loader");
-                  x.remove();
-              });
-              </script>
-            - | # 一些页面优化标签，看不懂可跳过
-              <meta
-                name="viewport"
-                content="width=device-width,minimum-scale=1,initial-scale=1"
-              />
-              <meta
-                http-equiv="content-type"
-                content="text/html; charset=utf-8"
-              />
-              <link
-                rel="alternate"
-                href="/feed.xml"
-                title="RSS"
-                type="application/rss+xml"
-              />
-            - | # 网站小图标，可换成你自己的图片，改href中的部分即可
-              <link
-                rel="apple-touch-icon-precomposed"
-                href="https://gravatar.loli.net/avatar/289efba375d63424de3c49569c446744?s=320"
-              />
-              <link
-                rel="shortcut
-                icon"
-                href="https://gravatar.loli.net/avatar/289efba375d63424de3c49569c446744?s=32"
-              />
-            - | # 来自primer/css的页面样式，不要改
-              <link
-                rel="stylesheet"
-                href="https://cdn.jsdelivr.net/npm/@primer/css@21.5.1/dist/primer.min.css"
-              />
-            - | # 字体
-              <link
-                rel="stylesheet"
-                href="https://cdn.jsdelivr.net/npm/@fontsource/monaspace-xenon@5.1.0/index.min.css"
-              />
-              <link
-                rel='stylesheet'
-                href='https://chinese-fonts-cdn.deno.dev/packages/jyhpws/dist/%E6%9E%81%E5%BD%B1%E6%AF%81%E7%89%87%E6%96%87%E5%AE%8B/result.css'
-              />
-              <style>
-                :root {
-                  --fontStack-monospace: "Monaspace Xenon", "极影毁片文宋 Medium", "Courier New", Courier, ui-monospace, monospace;
-                }
-                body, .markdown-body {
-                  font-family: var(--fontStack-monospace);
-                }
-              </style>
-            - | # 代码块高亮，异步加载，防止 GitHub 阻塞页面加载
-              <link
-                rel="preload"
-                as="style"
-                async="async"
-                onload="this.rel='stylesheet'"
-                href="https://cdn.jsdelivr.net/gh/poole/lanyon@v1.1.0/public/css/syntax.min.css"
-              />
-            - | # 填满页面
-              <style>
-                #wrap-content {
-                  min-height: 100vh;
-                }
-              </style>
-        page:
-          title: # 为每个页面自动生成一个 H1 title
-            enable: true
-          prepend:
-            - | # 首行缩进2字符
-              <style>
-                .markdown-body p {
-                  text-indent: 2em;
-                }
-              </style>
-            - |
-              <style>
-              .markdown-body .highlight pre,
-              .markdown-body pre {
-                  padding: 0;
-                  background: none;
-                }
-              </style>
-          plugin:
-            - smart_include:
-                enable: true
-                key: $
-              append:
-                | # 对KaTeX过长公式渲染超出页面的修正，感谢[@AmachiInori](https://github.com/wu-kan/wu-kan.github.io/issues/13)
-                <link
-                  rel="stylesheet"
-                  href="https://cdn.jsdelivr.net/npm/katex@0.16.18/dist/katex.min.css"
-                />
-                <style>
-                  .katex-display>.katex {
-                    white-space: normal;
-                  }
-                </style>
-                <script
-                  src="https://cdn.jsdelivr.net/combine/npm/katex@0.16.18/dist/katex.min.js,npm/katex@0.16.18/dist/contrib/auto-render.min.js"
-                  async="async"
-                  onload='renderMathInElement(document.body, { delimiters: [{left: "$$", right: "$$", display: true}, { left: "$", right: "$", display: false }, {left: "\\(", right: "\\)", display: false}, {left: "\\[", right: "\\]", display: true}]})'
-                ></script>
-            - smart_include:
-                enable: true
-                key: language-vega-lite
-              append: |
-                <style>
-                  pre.language-vega-lite,
-                  code.language-vega-lite {
-                    display: none !important;
-                  }
-                </style>
-                <script
-                  src="https://cdn.jsdelivr.net/combine/npm/vega@5.30.0,npm/vega-lite@5.23.0,npm/vega-embed@6.29.0"
-                  async="async"
-                  onload='
-                    for(let x of document.getElementsByClassName("language-vega-lite"))
-                      if(x.nodeName=="CODE")
-                      {
-                        let m = document.createElement("div");
-                        x.parentNode.insertAdjacentElement("beforebegin", m);
-                        vegaEmbed(m, JSON.parse(x.textContent));
-                      }'
-                ></script>
-            - smart_include:
-                enable: true
-                key: language-mermaid
-              append: |
-                <style>
-                  pre.language-mermaid,
-                  code.language-mermaid {
-                    display: none !important;
-                  }
-                  @media only screen {
-                    .mermaid {
-                      overflow: hidden hidden;
-                      max-width: 100%;
-                      max-height: 66.6vh;
-                    }
-                    .mermaid {
-                      overflow: auto auto;
-                    }
-                  }
-                </style>
-                <script
-                  src="https://cdn.jsdelivr.net/npm/mermaid@11.4.1/dist/mermaid.min.js"
-                  defer="defer"
-                  onload='
-                    for(let x of document.getElementsByClassName("language-mermaid"))
-                      if(x.nodeName=="CODE")
-                      {
-                        let m = document.createElement("div");
-                        m.classList.add("mermaid");
-                        m.textContent = x.textContent;
-                        x.parentNode.insertAdjacentElement("beforebegin", m);
-                      }'
-                ></script>
-            - smart_include:
-                enable: false
-              append: |
-                <link
-                rel="stylesheet"
-                href="https://cdn.jsdelivr.net/npm/sakana-widget@2.7.0/lib/sakana.min.css"
-                />
-                <script>
-                function initSakanaWidget() {
-                  const mizuno = SakanaWidget.getCharacter('takina');
-                  mizuno.image = `https://mizuno-ai.wu-kan.cn/pixiv/75805052_p0.webp`;
-                  SakanaWidget.registerCharacter('mizuno', mizuno);
-                  let sakana = document.createElement("div");
-                  sakana.style.bottom = "0";
-                  sakana.style.right = "0";
-                  sakana.style.zIndex = "1";
-                  sakana.style.position = "fixed";
-                  document.body.insertAdjacentElement("beforeend", sakana);
-                  new SakanaWidget({ character: 'mizuno' }).mount(sakana);
-                }
-                </script>
-                <script
-                async
-                onload="initSakanaWidget()"
-                src="https://cdn.jsdelivr.net/npm/sakana-widget@2.7.0/lib/sakana.min.js"
-                ></script>
-        post:
-          date: # 显示博文时间
-            enable: true
-            prepend: post on
-          wordcount: # 统计全文字数
-            enable: true
-            prepend: about
-            unit: words
-          readtime: # 计算文章阅读时间
-            enable: true
-            prepend: need
-            unit: min
-            divided_by: 300 # 正常人的阅读速度大概每分钟三百个字
-          copyright:
-            | # 我的文章使用最宽松的知识共享协议：署名 4.0 国际 (CC BY 4.0)。您可以自由地：共享 — 在任何媒介以任何形式复制、发行本作品；演绎 — 修改、转换或以本作品为基础进行创作；在任何用途下，甚至商业目的。只要你遵守许可协议条款，许可人就无法收回你的这些权利。惟须遵守下列条件：署名 — 您必须给出适当的署名，提供指向本许可协议的链接，同时标明是否（对原始作品）作了修改。您可以用任何合理的方式来署名，但是不得以任何方式暗示许可人为您或您的使用背书。
-            <br/>
-            <a target="_blank"
-              href="https://creativecommons.org/licenses/by/4.0/deed.zh"
-              rel="license">
-              CC BY 4.0
-            </a>
-            （除特别声明或转载文章外）
-            <br/>
-            <a target="_blank" href="/merger/">如果这篇博客帮助到你，可以请我喝一杯咖啡~</a>
-          related_posts:
-            enable: true
-        home: # 展示页的配置可跳过，详见<https://revealjs.com/>
-          append_to_section_tag:
-            - key: data-markdown
-            - key: data-separator # 水平展示页分隔符
-              value: <!-- .slide -->
-            - key: data-separator-vertical # 垂直展示页分隔符
-              value: <!-- .slide vertical=true -->
-          prepend: |
-            <link
-              rel="stylesheet"
-              href="https://cdn.jsdelivr.net/combine/npm/reveal.js@5.1.0/dist/reveal.min.css,npm/reveal.js@5.1.0/dist/theme/serif.min.css"
-            />
-            <style>
-              .reveal {
-                --r-main-font: var(--fontStack-monospace);
-                --r-heading-font: var(--fontStack-monospace);
-                --r-code-font: var(--fontStack-monospace);
-                --r-main-color: var(--fgColor-default, var(--color-fg-default));
-                --r-heading-color: var(--fgColor-default, var(--color-fg-default));
-                --r-link-color: var(--fgColor-accent, var(--color-accent-fg));
-                --r-background-color: var(--bgColor-default, var(--color-canvas-default));
-              }
-              .reveal .slides {
-                text-align: left;
-              }
-            </style>
-          append: |
-            <script
-              src="https://cdn.jsdelivr.net/combine/npm/reveal.js@5.1.0/dist/reveal.min.js,npm/reveal.js@5.1.0/plugin/markdown/markdown.min.js,npm/reveal.js@5.1.0/plugin/math/math.min.js"
-              defer="defer"
-              onload="
-              let x = document.getElementById('wrap-content');
-              x.classList.add('reveal');
-              Reveal.initialize({
-                scrollActivationWidth: null,
-                height: '100%',
-                mouseWheel: true,
-                navigationMode: 'linear',
-                plugins: [ RevealMarkdown,RevealMath.KaTeX ]
-              });
-            "></script>
-
-compress_html: # <https://github.com/penibelst/jekyll-compress-html>
-  clippings: all
-  comments: [] # 注释不能压缩，否则 reveal.js 的 ppt切屏受影响
-  endings: all
-  ignore:
-    envs: all # set to '[]' to but something wrong with syntax_highlighter_opts line_numbers true
-  blanklines: false
-  profile: false
-  startings: []
-
-# githubpage上支持的插件见<https://pages.github.com/versions/>
-plugins: # <https://jekyllrb.com/docs/plugins/>
-  - jekyll-readme-index # 使用readme做index，从而和github渲染效果一致
-  - jekyll-default-layout # 为每个markdown自动生成layout
-  - jekyll-seo-tag # 为每个页面生成标题
-  - jekyll-sitemap # 为站点生成站点地图
-  - jekyll-feed # 为站点生成RSS源
-  - jekyll-redirect-from # 站点页面重定向
-  - jekyll-remote-theme # 使用remote_theme插件实现主题的前后分离，详见<https://github.com/benbalter/jekyll-remote-theme/>
-
-remote_theme: https://github.com/wu-kan/jekyll-theme-WuK@5.2.0 #使用固定版本号以防止主题更新导致站点显示错乱
-
-readme_index: # 缺失index.md和index.html时，使用README.md代替之
-  with_frontmatter: true # 支持带有yaml头的README
-
-webmaster_verifications: # <https://jekyll.github.io/jekyll-seo-tag/usage/>
-  google: YIKi1rBnyUaS-DMYiluseI5kZzTwjCkTFmKkSkMZDJk
-  baidu: szbTSfUGAB
-
-permalink: pretty
-timezone: Asia/Shanghai # 解决githubpage显示时间不正确的问题，见<https://www.iana.org/time-zones>
-future: true # 允许发布时间在未来的文章
-
-# limit_posts: 999 # 限制博文数量
-# encoding: utf-8
-
-markdown: kramdown
-kramdown: # 见<https://kramdown.gettalong.org/options.html>
-  input: GFM # 见<http://jekyllcn.com/docs/configuration/#kramdown>
-  syntax_highlighter_opts: # 可见<https://kramdown.gettalong.org/syntax_highlighter/rouge.html>
-    block:
-      disable: false
-      line_numbers: true
-    span:
-      disable: false
-
-# 以下为 githubpage上不可修改的参数，见<https://help.github.com/en/github/working-with-github-pages/about-github-pages-and-jekyll>
-#lsi: false # 为相关文章生成索引
-#safe: true # 禁用自定义插件
-#source: [your repo's top level directory] # Jekyll 读取文件的路径
-#incremental: false # 增量生成
-#highlighter: rouge # 代码高亮器
-#gist:
-#  noscript: false
-#kramdown:
-#  math_engine: mathjax
-#  syntax_highlighter: rouge
+title: Hacker theme
+description: Hacker is a theme for GitHub Pages.
+show_downloads: true
+google_analytics:
+theme: jekyll-theme-hacker
