--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: Hacker theme
-description: Hacker is a theme for GitHub Pages.
+title: zfyc github pages
+description: this is a page for Open source software design！
 show_downloads: true
 google_analytics:
 theme: jekyll-theme-hacker
